--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,82 @@
 #root {
-  max-width: 1280px;
+  width: 100vw;
+  height: 100vh;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background: linear-gradient(256.47deg, #5E2AB3 2.64%, #161E6C 140.46%);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+:root {
+  --primary-color: #181625;
+  --accent-pink: #a876aa;
+  --accent-white: #e2e7ee;
 }
 
-@keyframes logo-spin {
-  from {
+
+.kinetic {
+  position: relative;
+  height: 80px;
+  width: 80px;
+}
+
+.kinetic::before,
+.kinetic::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  border: 50px solid transparent;
+  border-bottom-color: var(--accent-pink);
+  animation: rotateA 2s ease-in-out infinite 0.5s,
+    color-change 2s ease-in-out infinite 1s;
+}
+
+.kinetic::before {
+  animation: rotateB 2s ease-in-out infinite,
+    color-change 2s ease-in-out infinite;
+}
+
+@keyframes rotateA {
+  0%,
+  25% {
     transform: rotate(0deg);
   }
-  to {
+
+  50%,
+  75% {
+    transform: rotate(180deg);
+  }
+
+  100% {
     transform: rotate(360deg);
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@keyframes rotateB {
+  0%,
+  25% {
+    transform: rotate(90deg);
+  }
+
+  50%,
+  75% {
+    transform: rotate(270deg);
+  }
+
+  100% {
+    transform: rotate(450deg);
   }
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+@keyframes color-change {
+  75% {
+    border-bottom-color: var(--accent-white);
+  }
 }
