--- a/src/App.css
+++ b/src/App.css
@@ -18,12 +18,12 @@
 Sroll bar - 
 */
 ::-webkit-scrollbar {
-
   width: 20px;
 }
-::-webkit-scrollbar-track {
+
+::-webkit-scrollbar-track-piece {
   background-color: transparent;
-} 
+}
 ::-webkit-scrollbar-thumb {
   background-color: #d6dee1;
 }
