--- a/src/App.css
+++ b/src/App.css
@@ -17,29 +17,29 @@
 /* 
 Sroll bar - 
 */
+/* Width of the scroll bar */
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 10px;
 }
 
-::-webkit-scrollbar-track-piece {
+/* Track (the background of the scroll bar) */
+::-webkit-scrollbar-track {
   background-color: transparent;
 }
+
+/* Thumb (the draggable part of the scroll bar) */
 ::-webkit-scrollbar-thumb {
-  background-color: #d6dee1;
-}
-::-webkit-scrollbar-thumb {
-  background-color: #d6dee1;
-  border-radius: 20px;
-}
-::-webkit-scrollbar-thumb {
-  background-color: #d6dee1;
-  border-radius: 20px;
-  border: 6px solid transparent;
+  background-color: #777e80;
+  border-radius: 5px;
+  border: 3px solid transparent;
   background-clip: content-box;
 }
+
+/* Hover effect for the thumb */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #a8bbbf;
+  background-color: #717777;
 }
+
 
 
 /* 
